Fixed a couple layout issues

--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -83,8 +83,6 @@ button {
   }
 
   .card-text {
-    height: 200px;
-
     margin: 2% 0 0 0;
   }
 
@@ -262,8 +260,6 @@ button {
 
 .secondary-products img {
   width: 100%;
-  height: 200px;
-
   margin: 0 !important;
 }
 
@@ -330,7 +326,6 @@ button {
 
 .card-body {
   padding: 7%;
-  height: 150px;
 }
 
 .information {
